--- a/htm.htm
+++ b/htm.htm
@@ -1,1 +1,216 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Mind-Body Triage System</title>
 
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+<style>
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+}
+
+header {
+    text-align: center;
+    padding: 50px 20px 20px 20px;
+}
+
+header h1 {
+    font-size: 3rem;
+    font-weight: 700;
+    background: linear-gradient(90deg, #00f5ff, #00ff94);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+header p {
+    opacity: 0.8;
+    margin-top: 10px;
+}
+
+.glass-card {
+    width: 90%;
+    max-width: 700px;
+    backdrop-filter: blur(15px);
+    background: rgba(255, 255, 255, 0.08);
+    padding: 40px;
+    border-radius: 20px;
+    box-shadow: 0 15px 40px rgba(0,0,0,0.4);
+    margin: 30px;
+    transition: 0.3s ease;
+}
+
+.glass-card:hover {
+    transform: scale(1.02);
+}
+
+label {
+    font-weight: 500;
+    margin-top: 15px;
+    display: block;
+}
+
+select {
+    width: 100%;
+    padding: 12px;
+    margin-top: 8px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    font-size: 14px;
+}
+
+button {
+    width: 100%;
+    margin-top: 25px;
+    padding: 15px;
+    border-radius: 12px;
+    border: none;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    background: linear-gradient(90deg, #00f5ff, #00ff94);
+    transition: 0.3s ease;
+}
+
+button:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 20px rgba(0,255,200,0.6);
+}
+
+.result {
+    margin-top: 30px;
+    padding: 20px;
+    border-radius: 15px;
+    font-weight: 600;
+    text-align: center;
+    animation: fadeIn 0.5s ease;
+}
+
+.low {
+    background: rgba(0,255,100,0.2);
+    border: 1px solid #00ff94;
+}
+
+.medium {
+    background: rgba(255,200,0,0.2);
+    border: 1px solid #ffc107;
+}
+
+.high {
+    background: rgba(255,0,0,0.2);
+    border: 1px solid #ff4c4c;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; transform: translateY(10px); }
+    to { opacity: 1; transform: translateY(0); }
+}
+
+footer {
+    margin-top: auto;
+    padding: 20px;
+    opacity: 0.7;
+}
+</style>
+</head>
+
+<body>
+
+<header>
+    <h1>🚀 Mind-Body Triage</h1>
+    <p>AI-Inspired Health Intelligence for Students</p>
+</header>
+
+<div class="glass-card">
+
+    <label>🅰 Physical Symptom</label>
+    <select id="symptom">
+        <option>Headache</option>
+        <option>Stomach Pain</option>
+        <option>Fever</option>
+        <option>Chest Pain</option>
+        <option>Fatigue</option>
+    </select>
+
+    <label>🅱 Stress Level</label>
+    <select id="stress">
+        <option>Low</option>
+        <option>Medium</option>
+        <option>High</option>
+    </select>
+
+    <label>🅲 Sleep Quality</label>
+    <select id="sleep">
+        <option>Good</option>
+        <option>Poor</option>
+    </select>
+
+    <label>📚 Exams / Workload</label>
+    <select id="workload">
+        <option>No</option>
+        <option>Yes</option>
+    </select>
+
+    <button onclick="checkHealth()">Analyze Health</button>
+
+    <div id="result"></div>
+
+</div>
+
+<footer>
+    Hackathon 2026 | Team Mind-Body 🚀
+</footer>
+
+<script>
+function checkHealth() {
+    let symptom = document.getElementById("symptom").value;
+    let stress = document.getElementById("stress").value;
+    let sleep = document.getElementById("sleep").value;
+    let workload = document.getElementById("workload").value;
+
+    let resultDiv = document.getElementById("result");
+
+    if (symptom === "Stomach Pain" && stress === "High") {
+        resultDiv.className = "result medium";
+        resultDiv.innerHTML = "⚠ Medium Risk<br>Possible stress-related acidity.<br>Recommendation: Relaxation + Hydration.";
+    }
+
+    else if (symptom === "Chest Pain" && stress === "Low") {
+        resultDiv.className = "result high";
+        resultDiv.innerHTML = "🚨 HIGH RISK ALERT<br>Immediate medical attention recommended.";
+    }
+
+    else if (symptom === "Headache" && sleep === "Poor") {
+        resultDiv.className = "result low";
+        resultDiv.innerHTML = "🟢 Low Risk<br>Likely sleep-related. Rest well & hydrate.";
+    }
+
+    else if (symptom === "Fatigue" && workload === "Yes" && sleep === "Poor") {
+        resultDiv.className = "result medium";
+        resultDiv.innerHTML = "⚠ Medium Risk<br>Possible burnout. Improve sleep & manage workload.";
+    }
+
+    else {
+        resultDiv.className = "result low";
+        resultDiv.innerHTML = "🟢 Low Risk<br>Monitor symptoms and maintain healthy habits.";
+    }
+}
+</script>
+
+</body>
+</html>
