--- a/Home.html
+++ b/Home.html
@@ -614,7 +614,7 @@
       <div class="divider">or</div>
 
       <div class="signup-row">
-        Don't have an account? <a href="#">Create a free account</a>
+        Don't have an account? <a href="/signup (1).html">Create a free account</a>
       </div>
     </div>
   </div>
